# ble_audio

./: README.md
projects/ble_audio_receiver/: CMakeLists.txt  prj.conf
projects/ble_audio_receiver/src/: main.c
projects/ble_audio_receiver/src/ble/: ble_bap_unicast_server.c  ble_bap_unicast_server.h  ble_conn_control.c  ble_conn_control.h
projects/ble_audio_receiver/sysbuild/ipc_radio/: prj.conf
